utils: Fix BasicAuthAction's BASE64Decoder warning
Use org.apache.commons.codec.binary.Base64 instead of sun.misc.BASE64Decoder.